# python_editable_installs

test1/: pyproject.toml
test1/src/a/b/test1/: utils.py
test1/src/a/c/test1/: utils.py
test2/: pyproject.toml
test2/src/a/b/test2/: importer.py
